# jules-agent-orchestra

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ja.md  RELEASE.md  pyproject.toml  test_spinner_stack.py
.github/scripts/: ocr_review.py
.github/workflows/: ocr.yml  unittest.yml
document/jules-api/: overview.md  sessions.activities.md  sessions.md  sources.md
document/plans/: separete_refactor.md
document/specs/: advance.md  advance_todo.md  codereview_plan.md  cron_command_plan.md  delete_parallel_subtasks.md  inspect_result.md  state_manage.md
document/tools/copilot/: copilot_cli.md
document/tools/gemini/: gemini_cli_args.md
document/tools/opencode/: opencode_run.md
document/tools/opencodereview/: README.md
src/jules_agent/: __init__.py  cli.py  client.py  codex.py  config.py  git.py  github.py  models.py  ocr_workflow.py  persistence.py  pipeline.py  review.py  spinner.py  utils.py
src/jules_agent/cli/: __init__.py  advance_core.py  io.py  state.py  tui.py
src/jules_agent/services/: advance_service.py  approve_service.py  delete_service.py  feedback_service.py  import_service.py  merge_service.py  next_service.py  options.py  results.py  retry_service.py  review_pass_service.py  review_service.py  run_service.py  send_service.py  state_utils.py  (+2 more)
tests/: test_advance.py  test_claude_adapter.py  test_cli.py  test_client.py  test_config.py  test_feedback.py  test_github.py  test_import.py  test_interactive_selection.py  test_merge.py  test_next_command.py  test_opencode.py  test_pipeline.py  test_retry.py  test_review.py  test_review_pass.py  test_sequential_guard.py  test_status.py  test_sync.py  test_sync_output.py  test_tui.py
(+15 files in other folders)
