[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jules-agent"
version = "0.1.2"
description = "Decompose a task with Codex and dispatch the subtasks to Jules."
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "ship" },
]
dependencies = [
    "httpx",
    "textual",
]
urls = { Repository = "https://github.com/shipwebdotjp/jules-agent-orchestra" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "respx",
    "pytest-mock",
]

[project.scripts]
jules-agent = "jules_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
